[gd_scene load_steps=34 format=2]

[ext_resource path="res://digital-7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://f1 tings.jpg" type="Texture" id=2]
[ext_resource path="res://light.png" type="Texture" id=3]
[ext_resource path="res://World.gd" type="Script" id=4]
[ext_resource path="res://f1_instructions.png" type="Texture" id=5]
[ext_resource path="res://go_button.png" type="Texture" id=6]
[ext_resource path="res://f1_title.png" type="Texture" id=7]
[ext_resource path="res://go_button_pressed.png" type="Texture" id=8]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="PlaneMesh" id=2]
size = Vector2( 18, 6 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.360544, 0.707483, 1 )
colors = PoolColorArray( 0.996094, 0.984421, 0.984421, 1, 0.90905, 0.694336, 0.925781, 1, 0.910156, 0.540405, 0.904379, 1, 0.445439, 0.0150757, 0.964844, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="SpatialMaterial" id=5]
albedo_texture = SubResource( 4 )
metallic_specular = 0.31

[sub_resource type="ConvexPolygonShape" id=6]
points = PoolVector3Array( 9, 0, 3, -9, 0, 3, 9, 0, -3, -9, 0, -3 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 3, 0.5, 0.5 )

[sub_resource type="SpatialMaterial" id=8]

[sub_resource type="CubeMesh" id=9]
material = SubResource( 8 )
size = Vector3( 6, 1, 1 )

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 0.647059, 0.945098, 0.639216, 1 )

[sub_resource type="CubeMesh" id=11]
material = SubResource( 10 )
size = Vector3( 6, 1, 0.05 )

[sub_resource type="BoxShape" id=12]
extents = Vector3( 0.1, 1, 1 )

[sub_resource type="PlaneMesh" id=13]
flip_faces = true
size = Vector2( 0.3, 1 )

[sub_resource type="SpatialMaterial" id=14]

[sub_resource type="SpatialMaterial" id=15]
albedo_color = Color( 0.470588, 0.858824, 0.933333, 1 )

[sub_resource type="CubeMesh" id=16]
material = SubResource( 15 )
size = Vector3( 0.2, 0.05, 0.1 )

[sub_resource type="ConvexPolygonShape" id=17]
points = PoolVector3Array( -0.1, 0.025, 0.05, 0.1, 0.025, -0.05, 0.1, 0.025, 0.05, -0.1, 0.025, -0.05, -0.1, -0.025, 0.05, 0.1, -0.025, -0.05, 0.1, -0.025, 0.05, -0.1, -0.025, -0.05, 0.1, 0.025, 0.05, -0.1, 0.025, -0.05, 0.1, 0.025, -0.05, -0.1, 0.025, 0.05, 0.1, -0.025, 0.05, -0.1, -0.025, -0.05, 0.1, -0.025, -0.05, -0.1, -0.025, 0.05, 0.1, 0.025, 0.05, -0.1, -0.025, 0.05, -0.1, 0.025, 0.05, 0.1, -0.025, 0.05, 0.1, 0.025, -0.05, -0.1, -0.025, -0.05, -0.1, 0.025, -0.05, 0.1, -0.025, -0.05 )

[sub_resource type="SpatialMaterial" id=23]
flags_transparent = true
albedo_color = Color( 0.196078, 0.196078, 0.196078, 0.505882 )

[sub_resource type="CubeMesh" id=24]
size = Vector3( 0.05, 0.05, 0.05 )

[sub_resource type="Curve" id=25]
_data = [ Vector2( 0.00574712, 0.967719 ), 0.0, 0.0, 0, 0, Vector2( 0.977011, 0.0313554 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="SpatialMaterial" id=18]
albedo_color = Color( 0.984314, 0.87451, 0.168627, 1 )

[sub_resource type="CubeMesh" id=19]
material = SubResource( 18 )
size = Vector3( 0.2, 0.05, 0.1 )

[sub_resource type="DynamicFont" id=20]
size = 27
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=21]
tracks/0/type = "value"
tracks/0/path = NodePath("TheBoxInWhichTheButtonsAreIn:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TheBoxInWhichTheButtonsAreIn/BeginButton:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=22]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 3.7645, 0.795082, -0.0211859 ), Vector3( -2.92028, 0.970105, 0.810606 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 90, 0 ), Vector3( -26.5301, -3.25283, 1.45418 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:time_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 0.1 ]
}

[node name="World" type="Spatial"]
script = ExtResource( 4 )

[node name="Ground" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 0 )
physics_material_override = SubResource( 1 )

[node name="Ground" type="MeshInstance" parent="Ground"]
mesh = SubResource( 2 )
material/0 = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 6 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 3.7645, 0.795082, -0.0211859 )

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 7 )

[node name="Track" type="MeshInstance" parent="StaticBody"]
mesh = SubResource( 9 )
material/0 = null

[node name="Divider" type="MeshInstance" parent="StaticBody/Track"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.069916, 0 )
mesh = SubResource( 11 )
material/0 = null

[node name="Divider2" type="MeshInstance" parent="StaticBody/Track"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.07, 0.5 )
mesh = SubResource( 11 )
material/0 = null

[node name="Divider3" type="MeshInstance" parent="StaticBody/Track"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.07, -0.5 )
mesh = SubResource( 11 )
material/0 = null

[node name="FinishingLine" type="Area" parent="StaticBody/Track"]
transform = Transform( 0.99986, 0, -0.0167544, 0, 1, 0, 0.0167544, 0, 0.99986, -2.98826, 0.5, 0 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody/Track/FinishingLine"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.162813, 0, 0.00272821 )
shape = SubResource( 12 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody/Track/FinishingLine"]
transform = Transform( -1.62921e-07, -1, 3.72529e-09, 1, -1.62921e-07, 0, 4.44089e-16, 3.72529e-09, 1, 0, 0.1438, 0 )
mesh = SubResource( 13 )
material/0 = SubResource( 14 )

[node name="Car" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.79389, 0.5245, 0.260811 )

[node name="MeshInstance" type="MeshInstance" parent="Car"]
mesh = SubResource( 16 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Car"]
shape = SubResource( 17 )

[node name="Smoke" type="CPUParticles" parent="Car"]
material_override = SubResource( 23 )
emitting = false
amount = 20
mesh = SubResource( 24 )
direction = Vector3( 0, 1, 0 )
spread = 30.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 0.3
angular_velocity = 61.88
angular_velocity_random = 0.78
angle = 0.1
scale_amount_curve = SubResource( 25 )
color = Color( 0, 0, 0, 1 )

[node name="Car2" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.79389, 0.5245, -0.27011 )

[node name="MeshInstance" type="MeshInstance" parent="Car2"]
mesh = SubResource( 19 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Car2"]
shape = SubResource( 17 )

[node name="Smoke" type="CPUParticles" parent="Car2"]
material_override = SubResource( 23 )
emitting = false
amount = 20
mesh = SubResource( 24 )
direction = Vector3( 0, 1, 0 )
spread = 30.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 0.3
angular_velocity = 61.88
angular_velocity_random = 0.78
angle = 0.1
scale_amount_curve = SubResource( 25 )
color = Color( 0, 0, 0, 1 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.297, 3.769, 0 )
light_color = Color( 0.0313726, 0.988235, 0.807843, 1 )

[node name="OmniLight2" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.18938, 4.29326, 0.796681 )
light_color = Color( 0.662745, 0, 1, 1 )
light_energy = 1.86

[node name="Panel" type="TextureRect" parent="."]
margin_top = 2.0
margin_right = 431.0
margin_bottom = 207.0
texture = ExtResource( 2 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReactionTime1" type="Label" parent="Panel"]
margin_left = 78.0
margin_top = 61.0
margin_right = 134.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 20 )
text = "0.000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReactionTime2" type="Label" parent="Panel"]
margin_left = 306.0
margin_top = 60.0
margin_right = 362.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 20 )
text = "0.000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RaceTime1" type="Label" parent="Panel"]
margin_left = 78.0
margin_top = 108.0
margin_right = 134.0
margin_bottom = 130.0
custom_fonts/font = SubResource( 20 )
text = "0.000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RaceTime2" type="Label" parent="Panel"]
margin_left = 306.0
margin_top = 107.0
margin_right = 362.0
margin_bottom = 129.0
custom_fonts/font = SubResource( 20 )
text = "0.000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ready1Lane1" type="TextureRect" parent="Panel"]
margin_left = 186.0
margin_top = 49.0
margin_right = 213.0
margin_bottom = 80.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ready2Lane1" type="TextureRect" parent="Panel"]
margin_left = 185.0
margin_top = 81.0
margin_right = 212.0
margin_bottom = 112.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ready3Lane1" type="TextureRect" parent="Panel"]
margin_left = 185.0
margin_top = 112.0
margin_right = 212.0
margin_bottom = 143.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoLane1" type="TextureRect" parent="Panel"]
modulate = Color( 0.360784, 1, 0, 1 )
margin_left = 184.0
margin_top = 143.0
margin_right = 211.0
margin_bottom = 174.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FalseStartLane1" type="TextureRect" parent="Panel"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 184.0
margin_top = 174.0
margin_right = 211.0
margin_bottom = 205.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FalseStartLane2" type="TextureRect" parent="Panel"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 228.0
margin_top = 175.0
margin_right = 255.0
margin_bottom = 206.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoLane2" type="TextureRect" parent="Panel"]
modulate = Color( 0.360784, 1, 0, 1 )
margin_left = 230.0
margin_top = 143.0
margin_right = 257.0
margin_bottom = 174.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ready1Lane2" type="TextureRect" parent="Panel"]
margin_left = 232.0
margin_top = 49.0
margin_right = 259.0
margin_bottom = 80.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ready2Lane2" type="TextureRect" parent="Panel"]
margin_left = 231.0
margin_top = 81.0
margin_right = 258.0
margin_bottom = 112.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ready3Lane2" type="TextureRect" parent="Panel"]
margin_left = 231.0
margin_top = 112.0
margin_right = 258.0
margin_bottom = 143.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TheBoxInWhichTheButtonsAreIn" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = -46.5
margin_right = 151.0
margin_bottom = 249.5
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.975669, 1.05304 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="TheBoxInWhichTheButtonsAreIn"]
margin_right = 302.0
margin_bottom = 296.0
rect_min_size = Vector2( 200, 200 )

[node name="f1_instructions" type="Sprite" parent="TheBoxInWhichTheButtonsAreIn"]
position = Vector2( -236.364, 293.434 )
scale = Vector2( 0.79151, 0.949632 )
texture = ExtResource( 5 )

[node name="f1_title" type="Sprite" parent="TheBoxInWhichTheButtonsAreIn"]
position = Vector2( 232.661, -140.925 )
scale = Vector2( 1.02494, 0.949632 )
texture = ExtResource( 7 )

[node name="BeginButton" type="TextureButton" parent="TheBoxInWhichTheButtonsAreIn"]
margin_right = 302.0
margin_bottom = 296.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/BeginAnim = SubResource( 21 )

[node name="CameraAnimation" type="AnimationPlayer" parent="."]
anims/Camera = SubResource( 22 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
[connection signal="body_entered" from="StaticBody/Track/FinishingLine" to="." method="_on_FinishingLine_body_entered"]
[connection signal="pressed" from="TheBoxInWhichTheButtonsAreIn/BeginButton" to="." method="_on_BeginButton_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="CameraAnimation" to="." method="_on_CameraAnimation_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
